topjoy mozgokep kesz

--- a/8_topjoy_kepek_forgatasaval/index.html
+++ b/8_topjoy_kepek_forgatasaval/index.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="szoveg-tarolo">
-            <div id="szoveg">Kupak:)</div>
+            <div id="szoveg"></div>
         </div>
     </div>
 
