--- a/10_kutya_grid/index.html
+++ b/10_kutya_grid/index.html
@@ -14,7 +14,7 @@
 
     <main>
         <section id="cards" class="grid">
-            <!-- első kártya -->
+            <!-- első kártya
              <div class="card">
                 <img src="./img/dog-1.jpg" alt="dog1">
                 <div class="content">
@@ -22,7 +22,7 @@
                     <p>dog-1.jpg</p>
                 </div>
              </div>
-             <!-- második kártya -->
+             második kártya
              <div class="card">
                 <img src="./img/dog-2.jpg" alt="dog2">
                 <div class="content">
@@ -30,7 +30,7 @@
                     <p>dog-2.jpg</p>
                 </div>
              </div>
-            <!-- harmadik kártya -->
+             harmadik kártya 
              <div class="card">
                 <img src="./img/dog-3.jpg" alt="dog3">
                 <div class="content">
@@ -38,7 +38,7 @@
                     <p>dog-3.jpg</p>
                 </div>
              </div>
-             <!-- negyedik kártya -->
+              negyedik kártya 
              <div class="card">
                 <img src="./img/dog-4.jpg" alt="dog4">
                 <div class="content">
@@ -46,7 +46,7 @@
                     <p>dog-4.jpg</p>
                 </div>
              </div>
-            <!-- ötödik kártya -->
+             ötödik kártya 
              <div class="card">
                 <img src="./img/dog-5.jpg" alt="dog5">
                 <div class="content">
@@ -54,17 +54,17 @@
                     <p>dog-5.jpg</p>
                 </div>
              </div>
-            <!-- hatodik kártya -->
+             hatodik kártya 
             <div class="card">
                 <img src="./img/corgi.jpg" alt="dog6">
                 <div class="content">
                     <h3>Kártya #6</h3>
                     <p>dog-6.jpg</p>
                 </div>
-             </div>
+             </div>-->
         </section>
     </main>
 
-    <source src="script.js"></source>
+    <script src="script.js"></script>
 </body>
 </html>
